fixed misalignment for form button centering in responsive design

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ body {
   }
   .formButton {
     margin-top: 1em;
+    margin-left: 0;
   }
 }
 
